--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,36 +11,43 @@ Most Recent revision: 1/3/2019
 </head>
 
 	<body>
-		<main>
+		<main> 
 			<header>
 			<h1>Portfolio for Thomas Educate</h1>
 			</header>
 			<hr />
 			
-			<!-- We need to add links to projects.html, contact.html, and testimonials.html -->
-			<nav>
-			<p> Links to go here </p>
+			
+			<nav> 
+				<hr />
+				<p><a href="projects.html">Projects</a></p>
+				<p><a href="contact.html">Contact Me</a></p>
+				<p><a href="testimonials.html">Testimonials</a></p>
+				<hr />
 			</nav>
 			
 			<hr />
 			
-			<section>
+			<section> 
 				<article id="about-me">
-				<h2><em>About Me</em></h2>
-				<p>Hello! My name is Thomse Educate. I am 34 years old, married to my wonderful wife Jennifer. Our wonderful daughter Sienna is being the very best toddler she can be currently.</p>
-				<p>I need to determine an additional item for my about me to fill in here.</p>
+					<h2><em>About Me</em></h2>
+					<img src="images/selfie.jpg" alt="Selfie of Thomas Educate"/>
+					<p>Hello! <strong>My name is Thomse Educate.</strong> I am 34 years old, married to my wonderful wife Jennifer. Our wonderful daughter Sienna is being the very best toddler she can be currently.</p>
+					<p>I need to determine an <strong>additional item</strong> for my about me to fill in here.</p>
 				</article>
 				
 				<article id="past-exp">
-				<h2><em>Past Experiences</em></h2>
-				<p>I am a graduate of the University of Minnesota, with a Bachelor's Degree in Global Studies. This degree focused on the international political economy of Europe</p>
-				<p>I am well traveled, having visited 14 countries and 36 sates.</p>
+					<h2><em>Past Experiences</em></h2>
+					<img src="images/pastexp.jpg" alt="Past Experiences of Thomas Educate"/>
+					<p>I am a graduate of the University of Minnesota, with a Bachelor's Degree in Global Studies. This degree focused on the international political economy of Europe</p>
+					<p>I am well traveled, having visited 14 countries and 36 sates.</p>
 				</article>
 				
 				<article id="hobbies">
-				<h2><em>Hobbies</em></h2>
-				<p>I am a licensed skydiver. I started skydiving in college and most recently I was the Vice President of the University of Minnesota Skydiving Club.</p>
-				<p>I am an avid white-water kayaker. I have paddled the majority of the runnable rivers in Minnesota.</p>
+					<h2><em>Hobbies</em></h2>
+					<img src="images/hobbies.jpg" alt="Thomas Educate Skydiving"/>
+					<p>I am a licensed skydiver. I started skydiving in college and most recently I was the <span style="background-color: gold; border: thick solid maroon;">Vice President of the University of Minnesota Skydiving Club.</span></p>
+					<p>I am an avid <span style="background-color: lightblue;">white-water kayaker.</span> I have paddled the majority of the runnable rivers in Minnesota.</p>
 				</article>
 			</section>
 			
@@ -51,6 +58,6 @@ Most Recent revision: 1/3/2019
 			
 
 			
-
+		</main>
 	</body>
 </html>
