--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -7,7 +7,7 @@
 <html lang="en"> 
     <head> 
         <title>Page Title</title>	
-		<a href="index.html"><img src"selfie.jpg" alt="Selfie of Thomas Educate"></a>
+		<a href="index.html"><img src"images/selfie.jpg" alt="Selfie of Thomas Educate"></a>
     </head> 
     
     <body>
