--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -7,12 +7,12 @@
 <html lang="en"> 
     <head> 
         <title>Page Title</title>	
-    <a href="index.html"><img src"images/selfie.jpg" alt="Selfie of Thomas Educate"/></a>
+    <a href="index.html"><img src="images/selfie.jpg" alt="Selfie of Thomas Educate"/></a>
 	</head> 
     
     <body>
 		<main>
-        <header>
+        <header>git
             <h1>Main Title</h1>
         </header>
 		<hr />
