--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <!--
 Name: Thomas Educate
 Date Created: 12/18/2018
-Most Recent revision: 1/3/2019
+Most Recent revision: 1/4/2019
 -->
 
 <html lang="en">
@@ -20,9 +20,13 @@ Most Recent revision: 1/3/2019
 			
 			<nav> 
 				<hr />
-				<p><a href="projects.html">Projects</a></p>
-				<p><a href="contact.html">Contact Me</a></p>
-				<p><a href="testimonials.html">Testimonials</a></p>
+				<table>
+					<tr>
+						<td><p><a href="projects.html">Projects</a></p></td>
+						<td><p><a href="contact.html">Contact Me</a></p></td>
+						<td><p><a href="testimonials.html">Testimonials</a></p></td>
+					</tr>
+				</table>
 				<hr />
 			</nav>
 			
@@ -38,16 +42,63 @@ Most Recent revision: 1/3/2019
 				
 				<article id="past-exp">
 					<h2><em>Past Experiences</em></h2>
-					<img src="images/pastexp.jpg" alt="Past Experiences of Thomas Educate"/>
-					<p>I am a graduate of the University of Minnesota, with a Bachelor's Degree in Global Studies. This degree focused on the international political economy of Europe</p>
-					<p>I am well traveled, having visited 14 countries and 36 sates.</p>
+					<img src="images/audit.jpg" alt="Past Experiences of Thomas Educate"/>
+					<table>
+					<caption>Employment History</caption>
+					<tr>
+						<th>Years of Employment</th>
+						<th>Title</th>
+						<th>Company</th>
+					</tr>
+					<tr>
+						<td>2016-2018</td>
+						<td>Consultant</td>
+						<td>FICO</td>
+					</tr>
+					<tr>
+						<td>2014-2016</td>
+						<td>Project Manager</td>
+						<td>US Bank</td>
+					</tr>
+					<tr>
+						<td>2013</td>
+						<td>Account Coordinator</td>
+						<td>US Bank</td>
+					</tr>
+					</table>
 				</article>
 				
 				<article id="hobbies">
 					<h2><em>Hobbies</em></h2>
 					<img src="images/hobbies.jpg" alt="Thomas Educate Skydiving"/>
-					<p>I am a licensed skydiver. I started skydiving in college and most recently I was the <span style="background-color: gold; border: thick solid maroon;">Vice President of the University of Minnesota Skydiving Club.</span></p>
-					<p>I am an avid <span style="background-color: lightblue;">white-water kayaker.</span> I have paddled the majority of the runnable rivers in Minnesota.</p>
+					<ul>
+						<li>Authors</li>
+						<ol>
+							<li>James S.A. Corey</li>
+							<li>Tom Clancy</li>
+							<li>Ernest Cline</li>
+						</ol>
+						<li>Video Games</li>
+						<ol>
+							<li>Space Station 13</li>
+							<li>Cataclysm: Dark Days Ahead</li>
+							<li>Minecraft</li>
+						</ol>
+					</ul>
+					<ul>
+						<li>Sports</li>
+						<ul>
+							<li>Skydiving</li>
+							<li>White-Water Kayaking</li>
+							<li>Rock Climbing</li>
+						</ul>
+						<li>Outdoor Activities</li>
+						<ul>
+							<li>Mushroom Foraging</li>
+							<li>Hiking</li>
+							<li>Skiing</li>
+						</ul>
+					</ul>
 				</article>
 			</section>
 			
