--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@ Most Recent revision: 1/4/2019
 				<article id="about-me">
 					<h2><em>About Me</em></h2>
 					<img src="images/selfie.jpg" alt="Selfie of Thomas Educate"/>
-					<p>Hello! <strong>My name is Thomse Educate.</strong> I am 34 years old, married to my wonderful wife Jennifer. Our wonderful daughter Sienna is being the very best toddler she can be currently.</p>
+					<p>Hello! <strong>My name is Thomas Educate.</strong> I am 34 years old, married to my wonderful wife Jennifer. Our wonderful daughter Sienna is being the very best toddler she can be currently.</p>
 					<p>I need to determine an <strong>additional item</strong> for my about me to fill in here.</p>
 				</article>
 				
