--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -6,8 +6,9 @@
 -->
 <html lang="en"> 
     <head> 
-        <title>Contact Me</title>	
+        <title>Contact Me</title>		
     <a href="index.html"><img src="images/selfie.jpg" alt="Home"/></a>
+	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	</head> 
     
     <body>
@@ -19,6 +20,7 @@
 		
         <nav>
 		<p><a href="index.html">Home</a></p>
+		<div class="clear-float"></div>
         </nav>
 
 		<hr />
