--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -6,8 +6,9 @@
 -->
 <html lang="en"> 
     <head> 
-        <title>Page Title</title>	
-		<a href="index.html"><img src="images/selfie.jpg" alt="Selfie of Thomas Educate"/></a>
+        <title>Page Title</title>
+		<link href="styles/main.css" rel="stylesheet" type="text/css" />	
+		<a href="index.html"><img src="images/selfie.jpg" alt="Selfie of Thomas Educate" /></a>
     </head> 
     
     <body>
@@ -17,9 +18,12 @@
         </header>
 		<hr />
 		
-        <nav>
-		<p>Links to go here</p>
-        </nav>
+		<nav> 		
+			<p><a href="projects.html">Projects</a></p>
+			<p><a href="contact.html">Contact Me</a></p></
+			<p><a href="testimonials.html">Testimonials</a></p>
+			<div class="clear-float"></div>
+		</nav>
 
 		<hr />
 		
