--- a/portfolio/testimonials.html
+++ b/portfolio/testimonials.html
@@ -7,6 +7,7 @@
 <html lang="en"> 
     <head> 
         <title>Page Title</title>
+		<link href="styles/main.css" rel="stylesheet" type="text/css" />
 		<a href="index.html"><img src="images/selfie.jpg" alt="Selfie of Thomas Educate"/></a>
     </head> 
     
@@ -18,7 +19,10 @@
 		<hr />
 		
         <nav>
-		<p>Links to go here</p>
+		<p><a href="projects.html">Projects</a></p>
+		<p><a href="contact.html">Contact Me</a></p></
+		<p><a href="testimonials.html">Testimonials</a></p>
+		<div class="clear-float"></div>
         </nav>
 
 		<hr />
