--- a/Restaurant Site/index.html
+++ b/Restaurant Site/index.html
@@ -6,7 +6,13 @@
 -->
 <html lang="en"> 
     <head> 
-        <title>Home Page</title>		
+        <title>Home Page</title>
+		<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+		<style>
+		section {
+			background-color: #e8f1f2;
+		}
+		</style>
     </head> 
     
     <body>
@@ -21,7 +27,7 @@
 				<tr>
 					<td><p><a href="index.html">Home</a></p></td>
 					<td><p><a href="Menu.html">Menu</a></p></td>
-					<td><p><a href="contact.html">Contact Me</a></p></td>
+					<td><p><a href="contact.html">Contact Us</a></p></td>
 				</tr>
 			</table>
 		</nav>
@@ -29,7 +35,8 @@
 		<hr />
 		<section>
 		<article id="description">
-		<img src="images/profile.jpg" alt="Front of Restaurant"/>
+		<img src="images/profile.jpg" alt="Front of Restaurant" style="float:left;" />
+		<div style="clear:both"></div>
 			
 			<blockquote>
 			Restaurant Description<br>
