--- a/Restaurant Site/Menu.html
+++ b/Restaurant Site/Menu.html
@@ -6,7 +6,26 @@
 -->
 <html lang="en"> 
     <head> 
-        <title>Menu</title>		
+        <title>Menu</title>	
+		<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+		<style>
+		th {
+			font-size: 1.5em;
+			text-align: center;
+		}
+		td {
+			text-align: center;
+		}
+		section {
+			background-color: #e8f1f2;
+		}
+		#bevMenu tr:nth-child(odd) {
+			background-color: #668f80;
+		}
+		#bevMenu th {
+			background-color: #e8f1f2;
+		}
+		</style>
     </head> 
     
     <body>
@@ -21,7 +40,7 @@
 				<tr>
 					<td><p><a href="index.html">Home</a></p></td>
 					<td><p><a href="Menu.html">Menu</a></p></td>
-					<td><p><a href="contact.html">Contact Me</a></p></td>
+					<td><p><a href="contact.html">Contact Us</a></p></td>
 				</tr>
 			</table>
         </nav>
@@ -30,11 +49,14 @@
 		<section>
 			<article id="topMenu">
 			<table>
+			<thead>
 				<tr>
 					<th>Burger and Fries</th>
 					<th>Hot Dog and Chips</th>
 					<th>Italian Sausage and Peppers</th>
 				</tr>
+			</thead>
+			<tbody>
 				<tr>
 					<td>An American Classic!</td>
 					<td>A Summer Classic!</td>
@@ -65,22 +87,84 @@
 					<td></td>
 					<td></td>
 				</tr>
+			</tbody>
 			</table>
 			</article>
 			<article id="bottomMenu">
 			<table>
+			<thead>
 				<tr>
 					<th>Tenderloin Sandwhich and Chips</th>
 					<th>House Salad</th>
 					<th>Brisket Sandwhich and Fries</th>
 				</tr>
+			</thead>
+			</tbody>
 				<tr>
-					<td>Really Hits the Spot!<br>Plain or Sesame Seed Bun<br>Pickle, onion, tomato, and lettuce<br>Served with our house-made chips<br>$8.95</td>
-					<td>On the Lighter Side<br>Your choice - with or without cheese<br>Iceberg lettuce, tomatoes, peppers<br>Thousand Island or Ranch<br>DressingServed with a dinner roll<br>$6.95</td>
-					<td>A Taste of Texas!<br>Smoked Brisket on thin-cut<br>Texas Toast<br>Cole Slaw<br>Served with our famous thick-cut<br>french fries<br>$7.95</td>									
-				</tr>	
+					<td>Really Hits the Spot!</td>
+					<td>On the Lighter Side</td>
+					<td>A Taste of Texas!</td>								
+				</tr>
+				<tr>
+					<td>Plain or Sesame Seed Bun</td>
+					<td>Your choice - with or without cheese</td>
+					<td>Smoked Brisket on thick-cut</td>
+				</tr>
+				<tr>
+					<td>Pickle, onion, tomato, and lettuce</td>
+					<td>Iceberg lettuce, tomatoes, peppers</td>
+					<td>Texas Toast</td>
+				</tr>
+				<tr>
+					<td>Served with our house-made chips</td>
+					<td>Thousand Island or Ranch</td>
+					<td>Cole Slaw</td>
+				</tr>
+				<tr>
+					<td>$8.95</td>
+					<td>Dressing. Served with a dinner roll</td>
+					<td>Served with our famous thick-cut</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>$6.95</td>
+					<td>french fries</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td>$7.95</td>
+				</tr>
 			</table>
+			</tbody>
 			</article>
+			<article id="bevMenu">
+			<table>
+			<thead>
+				<tr>
+					<th colspan="2">Beverages</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Root Beer</td>
+					<td>$3.00</td>
+				</tr>
+				<tr>
+					<td>Bottled Water</td>
+					<td>$1.25</td>
+				</tr>
+				<tr>
+					<td>Lemonade</td>
+					<td>$1.00</td>
+				</tr>
+				<tr>
+					<td>Iced Tea</td>
+					<td>$1.25</td>
+				</tr>
+			</tbody>
+			</table>
+				
 			<br />
 			<br />
 			<br />
