--- a/portfolio/bootstrap-examples.html
+++ b/portfolio/bootstrap-examples.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- Creator: Thomas Educate
+Date Created: 1/6/2019
+Date last modified: 1/12/2019 -->
+
 <html lang="en">
 		<head>
 		<meta charset="utf-8">
@@ -23,6 +27,11 @@
 		nav .btn:hover {
 			font-weight: bold;
 		}
+		.card-header {
+			background-color: #5b7d87;
+			color: white;
+		}
+		
 		
 		</style>
 			
@@ -40,6 +49,12 @@
 			<a class="btn" href="projects.html">Projects</a>
 		</nav>
 		<div class="container">
+		
+			
+			</div>
+		</div>
+		
+		</div>
 		<div class="row">
 			<div class="col-lg-3 col-md">
 				<img src="images/selfie.jpg" alt="Selfie of Thomas Educate" class="img-fluid" />
@@ -52,7 +67,42 @@
 		</div>
 
 		</div>
-		
+		<div class="accordion" id="accordionExample">
+			<div class="card">
+				<div class="card-header" id="portfolio01">
+					<h5 class="mb-0">
+						<button class="btn btn-link" type="button" data-toggle="collapse"
+						data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+							My First Portfolio Piece
+						</button>
+					</h5>
+				</div>
+				
+				<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+					<div class="card-body">
+					<p><a href="" target="_blank">Name of Website</a><p>
+					<figure><img src="images/website-1778529.png" alt="Screenshot of home page" /></figure>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header" id="portfolio02">
+					<h5 class="mb-0">
+						<button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+						data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							My Second Portfolio Piece
+						</button>
+					</h5>
+				</div>
+				
+				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+					<div class="card-body">
+					<p><a href="" target="_blank">Name of Website</a><p>
+					<figure><img src="images/website-1778529.png" alt="Screenshot of home page" /></figure>
+					</div>
+				</div>
+			</div>
+		</div>
 		
 		<!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
