--- a/Restaurant Site/index.html
+++ b/Restaurant Site/index.html
@@ -5,13 +5,18 @@
     Most recent revision: 01/04/2019
 -->
 <html lang="en"> 
-    <head> 
+    <head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Home Page</title>
 		<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+		<!-- Bootstrap CDN copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<style>
 		section {
 			background-color: #e8f1f2;
 		}
+		
 		</style>
     </head> 
     
@@ -23,13 +28,9 @@
 		<hr />
 		
         <nav>
-			<table>
-				<tr>
-					<td><p><a href="index.html">Home</a></p></td>
-					<td><p><a href="Menu.html">Menu</a></p></td>
-					<td><p><a href="contact.html">Contact Us</a></p></td>
-				</tr>
-			</table>
+					<a class="btn badge-pill" href="index.html">Home</a>
+					<a class="btn badge-pill" href="Menu.html">Menu</a>
+					<a class="btn badge-pill" href="contact.html">Contact Us</a>
 		</nav>
 
 		<hr />
@@ -54,10 +55,16 @@
 		<br />
 		
         <footer>
-			<hr />
+			
 				<p>123 Main Street, Sudbury, MA, 01776</p>
 				<p>800-KL5-5555</p>
+			
         </footer>
-		</main>
-    </body> 
+		
+	<!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+   </main>
+   </body> 
 </html>
