--- a/Restaurant Site/Contact.html
+++ b/Restaurant Site/Contact.html
@@ -2,7 +2,7 @@
 <!--
     Name: Thomas Educate 
     Date Created: 01/04/2019 
-    Most recent revision: 01/04/2019
+    Most recent revision: 01/13/2019
 -->
 <html lang="en"> 
     <head>
@@ -19,13 +19,22 @@
 		label {
 			font-weight: bold;
 		}
+		.jumbotron {
+			background-color: #668f80;
+			color: #e8f1f2;
+			height: 100px;
+			text-align: center;
+			padding: 30px 10px 130px 10px;
+		}
 		</style>
     </head> 
     
     <body>
+	<noscript>This page is best viewed with JavaScript enabled. Please enable and re-load the page.</noscript>
 		<main>
-        <header>
+        <header class="jumbotron">
             <h1>Tommy's Eatery</h1>
+			<h2 class="font-italic">New Location Opening Soon!</h2>
         </header>
 		<hr />
 		
@@ -37,40 +46,60 @@
 
 		<hr />
 		<section>
-			<form action="submit.html" method="post">
-			<div class="required">
-				<label for="fullName">Name:</label>
-				<input type="text" id="fullName" name="fullName"><br />
-				<label for="email">Email:</label>
-				<input type="text" id="email" name="email"><br />
-				<label for="phone">Phone:</label>
-				<input type="text" id="phone" name="phone"><br />
-				<label for="inquiry" id="inquiry" name="inquiry">
-				<label for="reasons">Reason for Inquiry:</label>
-				<select name="reasons">
-					<option value="catering" Selected>Catering</option>
-					<option value="party">Private Party</option>
-					<option value="feedback">Feedback</option>
-					<option value="other">Other</option>
-				</select><br />
+			<form action="submit.html" method="post" class="needs-validation" novalidate>
+			<div class="form-group">
+				<div class="form-group col-md-6">
+					<label for="fullName">Name:</label>
+					<input type="text" class="form-control" id="fullName" placeholder="Full Name" value="John Doe" required>
+					<div class="valid-feedback">
+					Thank You!
+					</div>
+				</div>
+				<div class="form-group col-md-6">
+					<label for="email">Email:</label>
+					<input type="email" id="email" name="email">
+				</div>
+				<div class="form-group col-md-6">
+					<label for="phone">Phone:</label>
+					<input type="text" id="phone" name="phone">
+				</div>
+				<div class="form-group col-md-6">
+					<label for="inquiry" id="inquiry" name="inquiry">
+					<label for="reasons">Reason for Inquiry:</label>
+					<select class="custom-select">
+						<option value="catering" Selected>Catering</option>
+						<option value="party">Private Party</option>
+						<option value="feedback">Feedback</option>
+						<option value="other">Other</option>
+					</select>
+				</div>
 				<label for="addInformation">Additional Information:</label>
 				<textarea name="addInformation"></textarea><br />
-			</div>
+			</div>  
 				<label for="visted">Have you been to the restaurant?</label>
-				<input type="radio" name="visited" value="No" checked />No
-				<input type="radio" name="visited" value="Yes" />Yes<br/>
+				<div class="custom-control custom-radio custom-control-inline">
+					<input type="radio" id="visitedNo" name="visited" class="custom-control-input" checked>
+					<label class="custom-control-label" for="visitedNo">No</label>
+				</div>
+				<div class="custom-control custom-radio custom-control-inline">
+					<input type="radio" id="visitedYes" name="visited" class="custom-control-input">
+					<label class="custom-control-label" for="visitedYes">Yes</label>
+				</div>
+				
+				<div class="form-group col-md-6">
 				<label for="contactPref">Best days to contact you:</label>
 				<input type="checkbox" name="contactPref" value="M" />M
 				<input type="checkbox" name="contactPref" value="T" />T
 				<input type="checkbox" name="contactPref" value="W" />W
 				<input type="checkbox" name="contactPref" value="Th" />Th
-				<input type="checkbox" name="contactPref" value="F" />F<br />
-				<input type="submit"/><br />
+				<input type="checkbox" name="contactPref" value="F" />F
+				</div>
+				<button class="btn btn-primary" type="submit"/>Submit</button>
 			</form>
 		</section>
 		
         <footer>
-			<hr />
+			
 				<p>123 Main Street, Sudbury, MA, 01776</p>
 				<p>800-KL5-5555</p>
         </footer>
@@ -79,5 +108,25 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    </body> 
+		<script>
+	// Example starter JavaScript for disabling form submissions if there are invalid fields
+function() {
+  'use strict';
+  window.addEventListener('load', function() {
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.getElementsByClassName('needs-validation');
+    // Loop over them and prevent submission
+    var validation = Array.prototype.filter.call(forms, function(form) {
+      form.addEventListener('submit', function(event) {
+        if (form.checkValidity() === false) {
+          event.preventDefault();
+          event.stopPropagation();
+        }
+        form.classList.add('was-validated');
+      }, false);
+    });
+  }, false);
+})();
+</script>
+	</body> 
 </html>
